--- a/.github/workflows/build-and-delivery.yml
+++ b/.github/workflows/build-and-delivery.yml
@@ -1,23 +1,29 @@
 name: Build and Delivery
+
 on:
   workflow_run:
     workflows: ["Test Python App"]
-    branches: [dev]
-    types: [completed]
+    types:
+      - completed
+
 jobs:
   cd:
-    runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Login to Docker Hub
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/my-app:latest
