--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,24 +1,27 @@
-name: Build and Delivery
+name: Test Python App
+
 on:
-  workflow_run:
-    workflows: ["Test Python App"]
-    types:
-      - completed
+  push:
+    branches:
+      - '**'  # любые ветки
+  pull_request:
+
 jobs:
-  cd:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  ci:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/my-app:latest
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi httpx pytest uvicorn pydantic pydantic-settings
+      - name: Run tests
+        run: python -m pytest tests/
